--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,4 +1,4 @@
-// body,
-// html {
-//   -webkit-font-smoothing: antialiased;
-// }
+body,
+html {
+    font-family: 'Libre Franklin', sans-serif;
+}
