--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -10,14 +10,34 @@
         }
     }
     &__search {
-        color: $yellow-default;
-        border: 2px solid $yellow-default;
+        color: $gray-default;
+        border: 1px solid $yellow-default;
         background: transparent;
         padding: 8px 10px;
         width: 100%;
         max-width: 400px;
         border-radius: 16px;
         font-size: 0.7rem;
+    }
+    &__search::placeholder {
+        color: $gray-default;
+        opacity: 0.6;
+    }
+}
+
+.header-options {
+    display: flex;
+    gap: 20px;
+    list-style: none;
+    &__item {
+        display: flex;
+        align-items: center;
+        height: 20px;
+        width: 20px;
+        img {
+            color: $gray-default;
+            max-width: 20px;
+        }
     }
 }
 
