--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -3,3 +3,23 @@ body {
     font-size: 20px;
     font-weight: 650;
 }
+
+.content {
+    border: 1px solid red;
+    &__grid {
+        display: grid;
+        grid-template-columns: 400px 1fr;
+        max-width: 100%;
+    }
+    &__navbar {
+        background: $dark-main;
+        color: $yellow-default;
+        padding: 20px 50px;
+        ul {
+            list-style: none;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+    }
+}
