--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -5,7 +5,6 @@ body {
 }
 
 .content {
-    border: 1px solid red;
     &__grid {
         display: grid;
         grid-template-columns: 400px 1fr;
@@ -20,6 +19,26 @@ body {
             display: flex;
             flex-direction: column;
             gap: 8px;
+        }
+    }
+    .nav-options {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        li {
+            a {
+                font-size: 0.9rem;
+                color: $gray-default;
+                font-weight: 500;
+                display: flex;
+                align-items: center;
+                gap: 6px;
+            }
+            img {
+                max-width: 25px;
+                height: 25px;
+            }
         }
     }
 }
