--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Libre+Franklin:wght@100;200;400;600;900&family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100;200;400;600;900&display=swap');
 body,
 html {
     font-family: 'Libre Franklin', sans-serif;
