--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,9 +1,3 @@
-body {
-    background: beige;
-    font-size: 20px;
-    font-weight: 650;
-}
-
 .content {
     &__grid {
         display: grid;
@@ -13,7 +7,8 @@ body {
     &__navbar {
         background: $dark-main;
         color: $yellow-default;
-        padding: 20px 50px;
+        padding: 50px 50px 0px 50px;
+        height: 100vh;
         ul {
             list-style: none;
             display: flex;
@@ -34,11 +29,21 @@ body {
                 display: flex;
                 align-items: center;
                 gap: 6px;
+                transition: 0.3s ease;
+                &:hover {
+                    color: $yellow-default;
+                    img {
+                        color: $yellow-default;
+                    }
+                }
             }
             img {
                 max-width: 25px;
                 height: 25px;
             }
         }
+    }
+    .content-support {
+        background: $dark-gray;
     }
 }
