--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -20,6 +20,7 @@
         p {
             word-wrap: normal;
             font-size: 1.4rem;
+            letter-spacing: 0.1rem;
             max-width: 100%;
             width: 100%;
         }
