--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -20,15 +20,17 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 25px;
         li {
             a {
                 font-size: 0.9rem;
+                text-transform: uppercase;
+                letter-spacing: 0.2rem;
                 color: $gray-default;
                 font-weight: 500;
                 display: flex;
                 align-items: center;
-                gap: 6px;
+                gap: 15px;
                 transition: 0.3s ease;
                 &:hover {
                     color: $yellow-default;
