--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -52,6 +52,10 @@
 
 @import './components/footer';
 
+/* Modal */
+
+@import './components/modal';
+
 /*
 *
 *      ██████╗  █████╗  ██████╗ ███████╗███████╗
