--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -8,7 +8,15 @@
     height: 100%;
     width: 100%;
     background: rgba(0, 0, 0, 0.5);
+    &__title {
+        letter-spacing: 0.1rem;
+        font-size: 20px;
+        font-weight: 500;
+        text-transform: uppercase;
+        color: $yellow-light;
+    }
     &__container {
+        padding: 20px 15px;
         height: 100%;
         width: 100%;
         max-height: 600px;
@@ -17,12 +25,29 @@
         flex-direction: column;
         gap: 5px;
         color: $gray-default;
-        border: 1px solid red;
         background: $dark-gray;
+        overflow: hidden;
+        border-radius: 5px;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     }
     &__header {
+        position: relative;
         width: 100%;
         height: 50px;
-        border: 1px solid blue;
+        display: flex;
+        justify-content: space-between;
+        a {
+            position: absolute;
+            right: -10px;
+            top: -15px;
+            padding: 5px;
+        }
+        img {
+            max-width: 30px;
+            height: 30px;
+        }
+    }
+    &__body {
+        height: 100%;
     }
 }
