--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -54,6 +54,15 @@
     }
 }
 
+.content-title {
+    padding-bottom: 30px;
+    font-weight: 300;
+    font-size: 30px;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    text-decoration: un;
+}
+
 .active {
     display: block !important;
 }
