--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -67,6 +67,9 @@
     display: block !important;
 }
 
+
+/* === Sessão Download === */
+
 .content-download {
     &__grid {
         display: flex;
@@ -107,6 +110,54 @@
             text-transform: uppercase;
             letter-spacing: 0.1rem;
             font-size: 0.9rem;
+        }
+    }
+}
+
+
+/*=== Sessão Painel ====*/
+
+.content-panel {
+    display: flex;
+    gap: 20px;
+    button {
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        width: 100%;
+        border: 1px solid $yellow-default;
+        color: $yellow-light;
+        padding: 20px;
+        border-radius: 5px;
+        text-transform: uppercase;
+        letter-spacing: 4px;
+        img {
+            height: 24px;
+            width: 24px;
+        }
+        &:hover {
+            transition: 0.3s ease;
+            text-shadow: 1px 1px 2px $yellow-default;
+            box-shadow: 2px 2px 15px -4px rgba(255, 209, 0, 1);
+        }
+    }
+    .btn-download {
+        img {
+            transform: rotate(180deg);
+        }
+        &:hover {
+            img {
+                animation: downloadMove 0.5s ease-out infinite alternate;
+            }
+        }
+    }
+    .btn-upload {
+        &:hover {
+            img {
+                animation: uploadMove 0.5s ease-out infinite alternate;
+            }
         }
     }
 }
