--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -38,8 +38,8 @@
         justify-content: space-between;
         a {
             position: absolute;
-            right: -10px;
-            top: -15px;
+            right: 0px;
+            top: -7px;
             padding: 5px;
         }
         img {
@@ -49,7 +49,14 @@
     }
     &__body {
         height: 100%;
-        select {
+        label {
+            font-size: 0.8rem;
+            padding: 5px 0px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+        select,
+        input {
             border-radius: 4px;
             padding: 7px 5px;
             line-height: 14px;
@@ -91,5 +98,13 @@
     }
     &--active {
         display: flex !important;
+    }
+}
+
+.modal-download {
+    input {
+        margin: 10px 0px;
+        width: 100%;
+        max-width: 400px;
     }
 }
