--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -58,7 +58,7 @@
         select,
         input {
             border-radius: 4px;
-            padding: 7px 5px;
+            padding: 12px 10px;
             line-height: 14px;
             font-size: 14px;
             display: flex;
@@ -113,13 +113,20 @@
     }
     .file-upload {
         cursor: pointer;
-        border-radius: 4px;
         padding: 12px 10px;
+        border-radius: 4px;
         line-height: 14px;
-        font-size: 14px;
+        font-size: 0.9rem;
         display: flex;
         border: 1px solid $gray-default;
         width: 100%;
         max-width: 450px;
+        margin: 5px 0px;
+    }
+    span {
+        font-size: 0.8rem;
+        text-transform: unset;
+        margin: 10px 0px;
+        color: $red;
     }
 }
