validador de tamanho funfando

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -124,9 +124,9 @@
         margin: 5px 0px;
     }
     span {
-        font-size: 0.8rem;
+        font-size: 0.7rem;
         text-transform: unset;
         margin: 10px 0px;
-        color: $red;
+        color: $yellow-default;
     }
 }
