adicionando tipo de arquivo no retorno

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -99,6 +99,9 @@
     &--active {
         display: flex !important;
     }
+    .close-modal {
+        cursor: pointer;
+    }
 }
 
 .modal-download,
@@ -128,5 +131,8 @@
         text-transform: unset;
         margin: 10px 0px;
         color: $yellow-default;
+    }
+    .close-modal-upload {
+        cursor: pointer;
     }
 }
