modal config ajuste

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -113,6 +113,13 @@
     }
 }
 
+.modal-config {
+    input,
+    select {
+        max-width: 250px;
+    }
+}
+
 .modal-download,
 .modal-upload {
     form {
