--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -76,7 +76,6 @@
             }
             &::placeholder {
                 color: $gray-default;
-                text-transform: uppercase;
                 font-size: 0.9rem;
                 opacity: 0.7;
                 letter-spacing: 0.5px;
@@ -136,6 +135,9 @@
     input[type="file"] {
         display: none;
     }
+    input[type="url"]::placeholder {
+        text-transform: lowercase;
+    }
     .file-upload {
         cursor: pointer;
         padding: 12px 10px;
@@ -146,6 +148,7 @@
         border: 1px solid $gray-default;
         width: 100%;
         margin: 5px 0px;
+        text-transform: lowercase;
     }
     span {
         font-size: 0.7rem;
